--- a/plugin.audio.baidufm/changelog.txt
+++ b/plugin.audio.baidufm/changelog.txt
@@ -1,7 +1,7 @@
 [B]0.0.5[/B] (2015/11/09 by Benyjuice)
 - JSON API 地址改变
 
-[B]0.0.4[/B] (2014/09/29 by taxigps)
+[B]0.0.4[/B] (2014/09/29 by xucn)
 - Fix import error of simplejson
 
 [B]0.0.3[/B] (2013/05/18 by zhangyuanwei)
